create new endpoint role
