# internal/handlers/handler.go
@@ -4,6 +4,7 @@ import (
 	rest_goswagger_api "github.com/ramadoiranedar/rest-goswagger-api"
 	"github.com/ramadoiranedar/rest-goswagger-api/gen/models"
 	"github.com/ramadoiranedar/rest-goswagger-api/gen/restapi/operations/auth"
+	"github.com/ramadoiranedar/rest-goswagger-api/gen/restapi/operations/role"
 )
 
 type handler struct{}
@@ -12,6 +13,7 @@ type Handler interface {
 	// TODO: handlers
 	HealthHandler
 	AuthHandler
+	RoleHandler
 }
 
 // TODO: handlers
@@ -22,6 +24,10 @@ type HealthHandler interface {
 type AuthHandler interface {
 	PostAuthLogin(rt *rest_goswagger_api.Runtime, params *auth.PostAuthLoginParams) (response *models.PostAuthLoginResponse, err error)
 	PostAuthRegistration(rt *rest_goswagger_api.Runtime, params *auth.PostAuthRegistrationParams) (response *models.PostAuthRegistrationResponse, err error)
+}
+
+type RoleHandler interface {
+	PostRole(rt *rest_goswagger_api.Runtime, params *role.PostRoleParams) (response *models.BasicResponse, err error)
 }
 
 func NewHandler() Handler {
